RESOLVED FIXED307312
REGRESSION (304761@main): Unable to select text and scroll while dragging
https://bugs.webkit.org/show_bug.cgi?id=307312
Summary REGRESSION (304761@main): Unable to select text and scroll while dragging
Lily Spiniolas
Reported 2026-02-08 22:15:13 PST
Attachments
Lily Spiniolas
Comment 1 2026-02-08 22:27:14 PST
EWS
Comment 2 2026-02-09 10:39:29 PST
Committed 307090@main (4be0e1679885): <https://commits.webkit.org/307090@main> Reviewed commits have been landed. Closing PR #58178 and removing active labels.
EWS
Comment 3 2026-02-16 14:16:55 PST
Committed 305413.303@safari-7624-branch (7d07220b9199): <https://commits.webkit.org/305413.303@safari-7624-branch> Reviewed commits have been landed. Closing PR #4462 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.